# tally

./: .gitignore  .lefthook.yml  .mcp.json  .typos.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SOUL.md  cliff.toml  deny.toml  justfile  lcov.info
.claude/rules/: _index.md  git-commits.md  rust.md
.github/workflows/: ci.yml  ci_coverage.yml  ci_status.yml  ci_typos.yml  release.yml
_bmad-output/implementation-artifacts/: 1-1-tallyql-query-language.md  1-2-kickstart.md  1-2-rule-registry.md  1-3-deferred-dclaude-tally-capabilities.md  story.md
_bmad/_config/: bmad-help.csv  files-manifest.csv  manifest.yaml
_bmad/_config/agents/: bmm-dev.customize.yaml
_bmad/_config/ides/: claude-code.yaml
_bmad/_memory/: config.yaml
_bmad/bmm/: config.yaml
_bmad/bmm/teams/: default-party.csv
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
_bmad/tea/: config.yaml
_bmad/tea/workflows/testarch/test-review/: test-review-template.md
docs/: story-finding-mutability.md  story-rename-release-pat.md  story.md
docs/reference/: rule-registry.md  tallyql-syntax.md
scripts/: bmad-post-update.sh
src/: error.rs  lib.rs  main.rs  session.rs
src/cli/: batch.rs  capabilities.rs  common.rs  export.rs  handlers.rs  import.rs  init.rs  mod.rs  note.rs  query.rs  rebuild_index.rs  record.rs  rule.rs  stats.rs  suppress.rs  sync_cmd.rs  tag.rs  update.rs  update_fields.rs
src/mcp/: mod.rs  server.rs
src/model/: finding.rs  identity.rs  mod.rs  state_machine.rs
src/query/: ast.rs  error.rs  eval.rs  fields.rs  mod.rs  parser.rs
src/registry/: matcher.rs  mod.rs  normalize.rs  rule.rs  scope.rs  semantic.rs  stopwords.rs  store.rs
src/storage/: git_store.rs  mod.rs
tests/: cli_core_test.rs  cli_export_test.rs  cli_mutability_test.rs  cli_query_enhanced_test.rs  cli_query_test.rs  cli_record_test.rs  cli_rule_test.rs  cli_test.rs  cli_update_test.rs  e2e_lifecycle_test.rs  e2e_mcp_workflow_test.rs  e2e_rule_registry_test.rs  error_test.rs  identity_test.rs  mcp_enhanced_test.rs  mcp_test.rs  mcp_unit_test.rs  model_test.rs  property_edit.rs  property_identity.rs  property_query.rs  property_registry.rs  query_eval_test.rs  query_foundation_test.rs  query_parser_test.rs  registry_matcher_test.rs  registry_model_test.rs  registry_normalize_test.rs  registry_scope_test.rs  registry_semantic_test.rs  session_test.rs  storage_test.rs
tests/cli_common/: mod.rs
