[package]
name = "tally"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
description = "Git-backed findings tracker for AI coding agents"
repository = "https://github.com/1898andCo/tally"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
git2 = "0.20"
hex = "0.4"
rmcp = { version = "0.8", features = ["server", "transport-io", "macros"] }
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["io-std", "rt", "macros"] }
uuid = { version = "1", features = ["v7", "serde"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
proptest = "1"
tempfile = "3"

[lints.clippy]
all = { level = "deny" }
pedantic = { level = "warn" }
unwrap_used = { level = "deny" }

[lints.rust]
unsafe_code = { level = "forbid" }
