[package]
name = "tally-ng"
version = "0.6.1"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
description = "Git-backed findings tracker for AI coding agents"
repository = "https://github.com/1898andCo/tally"

[[bin]]
name = "tally"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
chumsky = "0.10"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
comfy-table = "7"
git2 = "0.20"
globset = "0.4"
hex = "0.4"
home = "0.5"
humantime = "2"
rmcp = { version = "0.8", features = ["server", "transport-io", "macros"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
strsim = "0.11"
thiserror = "2"
tokio = { version = "1", features = [
  "io-std",
  "rt",
  "rt-multi-thread",
  "macros",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v7", "serde"] }

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/tally-v{ version }-{ target-triple }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "tally"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
proptest = "1"
tempfile = "3"

[lints.clippy]
all = { level = "deny" }
pedantic = { level = "warn", priority = -1 }
unwrap_used = { level = "deny" }

[lints.rust]
unsafe_code = { level = "forbid" }
